fix task toolbar height on mobiles

--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -310,6 +310,8 @@ h2.sectionTitle .icon {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: -4px;
+  margin-bottom: -4px;
 }
 #speedSlider {
   background-color: rgba(0,0,0,0.3);
@@ -613,7 +615,6 @@ h2.sectionTitle .icon {
   flex: 0 1 51px;
   display: flex;
   align-items: center;
-  min-height: 58px;
   padding: 15px;
   background-color: #4a4a4a;
   color: #fff;
